--- a/MyWebsite/Views/Shared/_Layout.cshtml
+++ b/MyWebsite/Views/Shared/_Layout.cshtml
@@ -85,6 +85,10 @@
         padding-bottom:40px;
     }
 
+    #navHomeIcon {
+        font-size: 30px;
+    }
+
     #navHomeIcon:hover {
         color: #525e78 !important;
         background-color: #020305 !important;
