--- a/MyWebsite/Views/Shared/_Layout.cshtml
+++ b/MyWebsite/Views/Shared/_Layout.cshtml
@@ -64,12 +64,12 @@
                 });
         });
     </script>
-    <footer>
-        <div class="footer-copyright black">
-            <ul id="horizontal-list" style="list-style: none;" class="center z-depth-5">
+    <footer style="z-index: 5">
+        <div class="footer-copyright black z-depth-5">
+            <ul id="horizontal-list" style="list-style: none;" class="center">
                 <li id="copyright"> © 2018 Jordyn Thompson</li>
                 <li><a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i class="fab fa-linkedin footer-icon"></i></a></li>
-                <li><a href="https://github.com/JordynRachelThompson/" target="_blank"><i class="fab fa-github-square footer-icon"></i></a></li>
+                <li><a href="https://github.com/JordynRachelThompson/" target="_blank"><i class="fab fa-github-square footer-icon"></i></a></listyle="z-index:>
                 <li><a href="mailto:jordyn@virtualzero.net" id="emailAddress">jordyn@virtualzero.net</a></li>
             </ul>
         </div>
