--- a/MyWebsite/Views/Account/ForgotPassword.cshtml
+++ b/MyWebsite/Views/Account/ForgotPassword.cshtml
@@ -1,31 +1,24 @@
 ﻿@model ForgotPasswordViewModel
 <link rel="stylesheet" href="~/css/materialize.css" />
 
-<h3 style="text-align:center; margin-top:150px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">FORGOT PASSWORD</h3>
+<h3 class="centerAccountText" style="margin-top:150px;">FORGOT PASSWORD</h3>
 
-<div style="width: 30%; margin-left: 150px; margin-top: 100px;">
-    <div class="row">
-        <div class="col-sm-6">
-            <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Enter Your Email</h4>
-            <div class="row">
-                <div class="col-md-4">
-                    <form asp-action="ForgotPassword" method="post">
-                        <div>
-                            <label class="textGrey" asp-for="Email"></label>
-                            <input asp-for="Email" style="color: #cfd8dc" />
-                            <span asp-validation-for="Email"></span>
-                        </div>
-                        <button style="margin-top:10px;" type="submit" class=" waves-effect waves-light btn sharpCorners black-btn">Reset Password</button>
-                    </form>
-                </div>
-                <div style="margin-top: 40px; margin-left: 3px;">
-                    <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
-                </div>
+
+<div class="row" style=" margin-top:50px;">
+    <div class="accountBox col l6 offset-l3 m10 offset-m1 s12 z-depth-4">
+        <form id="acctForm" asp-action="ForgotPassword" method="post">
+            <h4 class="centerAccountText flow-text" style="margin-top:30px; margin-bottom: 30px;">Enter Your Email</h4>
+            <div class="input-field">
+                <i class="material-icons prefix">person_outline</i>
+                <input asp-for="Email" id="Email" placeholder="Username" class="validate" required type="text" style="width:85%" />
+                <label for="Email">Username</label>
+                <p><span asp-validation-for="Email" class="validate"></span></p>
             </div>
+            <button type="submit" class="waves-effect waves-light btn sharpCorners black-btn"><span class="fas fa-sign-in-alt"></span> Reset Password</button>
+        </form>
+        <div style="margin-top: 70px;">
+            <a class="waves-effect waves-light btn sharpCorners black-btn" onclick="window.history.go(-1)" style="margin: 1px;"><i class="fas fa-backward" style="font-size: 15px;"></i> return</a>
         </div>
     </div>
 </div>
-
-<div style="height:300px;"></div>
-
 
