--- a/MyWebsite/Views/Account/Register.cshtml
+++ b/MyWebsite/Views/Account/Register.cshtml
@@ -1,38 +1,41 @@
 ﻿@model RegisterViewModel
 
-
-<h3 style="text-align:center; margin-top:150px; font-weight:200; letter-spacing:1.5px;">REGISTER</h3>
+<h3 class="centerAccountText" style="margin-top:150px;">REGISTER</h3>
 
 <div style="margin:50px 100px;">
-    <div class="row">
-        <div class="col s6">
-            <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-                <h4 style="text-align:center; margin-top:50px; font-weight:200; margin-bottom: 50px; letter-spacing:1.5px;">Create a New Account</h4>
-                <div>
-                    <label class="textGrey">Email (username)</label>
-                    <input asp-for="Email" style="color: #cfd8dc"/>
-                    <span asp-validation-for="Email"></span>
+    <div class="row" margin-top: 50px;>
+        <div class="accountBox col l6 offset-l3 m10 offset-m1 s12 z-depth-4">
+            <form id="acctForm" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+                <h4 class="centerAccountText flow-text" style="margin-top:30px; margin-bottom: 30px;">Create a New Account</h4>
+                <div class="input-field">
+                    <i class="material-icons prefix">person_outline</i>
+                    <input asp-for="Email" id="Email" placeholder="Username" class="validate" required type="text" style="width:85%" />
+                    <label for="Email">Username</label>
+                    <p><span asp-validation-for="Email" class="validate"></span></p>
                 </div>
-                <div>
-                    <label class="textGrey" asp-for="Password"></label>
-                    <input asp-for="Password"  style="color: #cfd8dc"/>
-                    <span asp-validation-for="Password"></span>
+
+                <div class="input-field" style="margin-top: 30px;">
+                    <i class="material-icons prefix">lock_outline</i>
+                    <input asp-for="Password" id="Password" placeholder="Password" class="validate" required type="password" style="width:85%" />
+                    <label for="Password">Password</label>
+                    <p><span asp-validation-for="Password"></span></p>
                 </div>
-                <div>
-                    <label class="textGrey" asp-for="ConfirmPassword"></label>
-                    <input asp-for="ConfirmPassword" style="color: #cfd8dc"/>
-                    <span asp-validation-for="ConfirmPassword" style="color: #cfd8dc" ></span>
+
+                <div class="input-field" style="margin-top: 30px;">
+                    <i class="material-icons prefix">check</i>
+                    <input asp-for="ConfirmPassword" id="ConfirmPassword" placeholder="Confirm Password" class="validate" required type="password" style="width:85%" />
+                    <label for="ConfirmPassword">Confirm Password</label>
+                    <p><span asp-validation-for="Password"></span></p>
                 </div>
-                <button style="margin-top:10px;" type="submit" class=" waves-effect waves-light btn sharpCorners black-btn"><span class="far fa-user"></span> Register</button>
+                <button type="submit" class=" waves-effect waves-light btn sharpCorners black-btn"><span class="far fa-user"></span> Register</button>
             </form>
-            <div style="margin-top: 40px; margin-left: 3px;">
-                <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
+            <div style="margin-top: 70px;">
+                <a class="waves-effect waves-light btn sharpCorners black-btn" onclick="window.history.go(-1)" style="margin: 1px;"><i class="fas fa-backward" style="font-size: 15px;"></i> return</a>
             </div>
         </div>
     </div>
 </div>
 
-<div style="height:300px;"></div>
 
 
 
